ninety-eight and ninety-nine

--- a/python_101_exercises.ipynb
+++ b/python_101_exercises.ipynb
@@ -4927,7 +4927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4965,7 +4965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -4974,7 +4974,7 @@
        "0.08"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4985,7 +4985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4999,7 +4999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -5008,7 +5008,7 @@
        "0.08"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 278,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5019,7 +5019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
@@ -5028,7 +5028,7 @@
        "5"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 279,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5039,7 +5039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5053,7 +5053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
@@ -5062,7 +5062,7 @@
        "5"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 281,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5077,97 +5077,65 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-288-945abb4ccf7d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mshopping_cart\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"items\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"quantity\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
-     ]
-    }
-   ],
-   "source": [
-    "shopping_cart[\"items\"][\"quantity\"].items()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 283,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-283-3b43c67578b2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mtotal\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mbook\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mshopping_cart\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mtotal\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mbook\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"items\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"quantity\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtotal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: string indices must be integers"
-     ]
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 288,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "total = 0\n",
-    "for book in shopping_cart:\n",
-    "    total += book[\"items\"][\"quantity\"]\n",
-    "    \n",
+    "for item_dict in shopping_cart[\"items\"]:\n",
+    "    total += item_dict[\"quantity\"]\n",
     "total"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 289,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'float' object has no attribute 'keys'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-285-30abce437ebc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mshopping_cart\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m'quantity'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0;31m# Adding value of quantity to sum\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0msum\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'quantity'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'float' object has no attribute 'keys'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sum = 0\n",
-    "  \n",
-    "# iterating key value pair \n",
-    "for key, value in shopping_cart.items(): \n",
-    "  \n",
-    "    if value and 'quantity' in value.keys(): \n",
-    "        # Adding value of quantity to sum \n",
-    "        sum += value['quantity']  \n",
-    "  \n",
-    "# printing sum \n",
-    "print(sum)"
+    "# Exercise 98\n",
+    "# Write a function named total_number_of_items that takes in the shopping cart as input and returns the total number all item quantities.\n",
+    "# This should return the sum of all of the quantities from each item type\n",
+    "\n",
+    "def total_number_of_items(shopping_cart):\n",
+    "    sum = 0\n",
+    "    for item_list in shopping_cart[\"items\"]:\n",
+    "        sum += item_list[\"quantity\"]   \n",
+    "    return sum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'title': 'orange juice', 'price': 3.99, 'quantity': 1},\n",
-       " {'title': 'rice', 'price': 1.99, 'quantity': 3},\n",
-       " {'title': 'beans', 'price': 0.99, 'quantity': 3},\n",
-       " {'title': 'chili sauce', 'price': 2.99, 'quantity': 1},\n",
-       " {'title': 'chocolate', 'price': 0.75, 'quantity': 9}]"
+       "17"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 290,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "total_number_of_items(shopping_cart)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# This is a list.\n",
     "\n",
@@ -5176,7 +5144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [
     {
@@ -5185,7 +5153,7 @@
        "{'title': 'orange juice', 'price': 3.99, 'quantity': 1}"
       ]
      },
-     "execution_count": 295,
+     "execution_count": 284,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5198,12 +5166,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 291,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 291,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Back into a dictionary\n",
+    "\n",
+    "shopping_cart['items'][0]['quantity']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for item in shopping_cart:\n",
-    "    i = range(1,)"
+    "# Exercise 99\n",
+    "# Write a function named get_average_item_price that takes in the shopping cart as an input and returns the average of all the item prices.\n",
+    "# Hint - This should determine the total price divided by the number of types of items. This does not account for each item type's quantity.\n",
+    "\n",
+    "def get_average_item_price(shopping_cart):\n",
+    "    sum = 0\n",
+    "    for item_list in shopping_cart[\"items\"]:\n",
+    "        sum += item_list[\"price\"]   \n",
+    "    return sum/len(\"items\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.1420000000000003"
+      ]
+     },
+     "execution_count": 293,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_average_item_price(shopping_cart)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 300,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can't multiply sequence by non-int of type 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-300-224131026514>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mtotal_quantity\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mtotal_price\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mshopping_cart\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"items\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"price\"\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m\"quantity\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "total_price = 0\n",
+    "total_quantity = 0\n",
+    "\n",
+    "total_price = shopping_cart[\"items\"][0][\"price\"*\"quantity\"]"
    ]
   },
   {
@@ -5211,10 +5252,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "# Back into a dictionary\n",
-    "\n",
-    "shopping_cart['items'][0]['quantity']"
+    "# Exercise 100\n",
+    "# Write a function named get_average_spent_per_item that takes in the shopping cart \n",
+    "# and returns the average of summing each item's quanties times that item's price.\n",
+    "# Hint: You may need to set an initial total price and total total quantity to zero,\n",
+    "# then sum up and divide that total price by the total quantity\n",
+    "\n"
    ]
   }
  ],
