ninety-eight through one hundred and one

--- a/python_101_exercises.ipynb
+++ b/python_101_exercises.ipynb
@@ -4927,7 +4927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5073,7 +5073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -5082,7 +5082,7 @@
        "17"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 282,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5096,7 +5096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5106,14 +5106,14 @@
     "\n",
     "def total_number_of_items(shopping_cart):\n",
     "    sum = 0\n",
-    "    for item_list in shopping_cart[\"items\"]:\n",
-    "        sum += item_list[\"quantity\"]   \n",
+    "    for item in shopping_cart[\"items\"]:\n",
+    "        sum += item[\"quantity\"]   \n",
     "    return sum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
@@ -5122,7 +5122,7 @@
        "17"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 300,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5133,9 +5133,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 301,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'orange juice', 'price': 3.99, 'quantity': 1},\n",
+       " {'title': 'rice', 'price': 1.99, 'quantity': 3},\n",
+       " {'title': 'beans', 'price': 0.99, 'quantity': 3},\n",
+       " {'title': 'chili sauce', 'price': 2.99, 'quantity': 1},\n",
+       " {'title': 'chocolate', 'price': 0.75, 'quantity': 9}]"
+      ]
+     },
+     "execution_count": 301,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This is a list.\n",
     "\n",
@@ -5144,7 +5159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [
     {
@@ -5153,7 +5168,7 @@
        "{'title': 'orange juice', 'price': 3.99, 'quantity': 1}"
       ]
      },
-     "execution_count": 284,
+     "execution_count": 302,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5166,7 +5181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
@@ -5175,7 +5190,7 @@
        "1"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 303,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5188,7 +5203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5198,14 +5213,14 @@
     "\n",
     "def get_average_item_price(shopping_cart):\n",
     "    sum = 0\n",
-    "    for item_list in shopping_cart[\"items\"]:\n",
-    "        sum += item_list[\"price\"]   \n",
+    "    for item in shopping_cart[\"items\"]:\n",
+    "        sum += item[\"price\"]   \n",
     "    return sum/len(\"items\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
@@ -5214,7 +5229,7 @@
        "2.1420000000000003"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 305,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5225,26 +5240,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 307,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "can't multiply sequence by non-int of type 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-300-224131026514>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mtotal_quantity\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mtotal_price\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mshopping_cart\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"items\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"price\"\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m\"quantity\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'str'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "total_price = 0\n",
     "total_quantity = 0\n",
     "\n",
-    "total_price = shopping_cart[\"items\"][0][\"price\"*\"quantity\"]"
+    "total_price = shopping_cart[\"items\"][0][\"price\"] * shopping_cart[\"items\"][0][\"quantity\"]\n",
+    "print(totaa)"
    ]
   },
   {
@@ -5256,7 +5260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5265,8 +5269,88 @@
     "# and returns the average of summing each item's quanties times that item's price.\n",
     "# Hint: You may need to set an initial total price and total total quantity to zero,\n",
     "# then sum up and divide that total price by the total quantity\n",
-    "\n"
+    "\n",
+    "def get_average_spent_per_item(shopping_cart):\n",
+    "    total_price = 0\n",
+    "    total_quantity = 0\n",
+    "    \n",
+    "    for item in shopping_cart[\"items\"]:\n",
+    "        total_price += item[\"price\"] * item[\"quantity\"]\n",
+    "        total_quantity += item[\"quantity\"]\n",
+    "    return total_price / total_quantity"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 294,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.333529411764706"
+      ]
+     },
+     "execution_count": 294,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_average_spent_per_item(shopping_cart)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 101\n",
+    "# Write a function named most_spent_on_item that takes in the shopping cart as input and returns the dictionary associated with the item that has the highest price*quantity.\n",
+    "# Be sure to do this as programmatically as possible. \n",
+    "# Hint: Similarly to how we sometimes begin a function with setting a variable to zero, we need a starting place:\n",
+    "# Hint: Consider creating a variable that is a dictionary with the keys \"price\" and \"quantity\" both set to 0. You can then compare each item's price and quantity total to the one from \"most\"\n",
+    "\n",
+    "def most_spent_on_item(shopping_cart):\n",
+    "    max_total = 0\n",
+    "    \n",
+    "    for item in shopping_cart[\"items\"]:\n",
+    "        total = item[\"price\"] * item[\"quantity\"]\n",
+    "        if total > max_total:\n",
+    "            max_total = total\n",
+    "            \n",
+    "    for item in shopping_cart[\"items\"]:\n",
+    "        if item[\"price\"] * item[\"quantity\"] == max_total:\n",
+    "            return item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 296,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'title': 'chocolate', 'price': 0.75, 'quantity': 9}"
+      ]
+     },
+     "execution_count": 296,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "most_spent_on_item(shopping_cart)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
